Ho fatto il merge manuale dei file modificate da Mosè: imparerò mai a d usare GIT? :-)

--- a/preambolo.sty
+++ b/preambolo.sty
@@ -7,7 +7,13 @@
 \RequirePackage{lmodern}
 \RequirePackage{microtype}
 
-\RequirePackage[showframe]{geometry}
+\RequirePackage[%
+  a4paper,%
+  top=2.5cm,%
+  bottom=2.5cm,%
+  left=3cm,%
+  right=3cm,%
+]{geometry}
 
 \RequirePackage{marvosym}
 \RequirePackage{graphicx}
@@ -35,6 +41,13 @@
 ]{biblatex}
 \addbibresource{biblio.bib}
 
+\RequirePackage[os=win]{menukeys}
+\usetikzlibrary{shapes.geometric}
+% tasto Meta
+\newcommand{\Meta}{Meta
+  \tikz{\node[scale=0.5,shape=diamond,fill=black,
+    sharp corners,draw,
+    baseline=-\the\dimexpr\fontdimen22\textfont2\relax] {};}}
 
 \newcommand{\titolo}{Una introduzione a GNU Emacs \& AUC\TeX{}}
 \newcommand{\autoreb}{Orlando Iovino}
