--- a/introemacs.tex
+++ b/introemacs.tex
@@ -230,13 +230,12 @@ estensione all'interno di \emacs{} stesso. Basta infatti eseguire
 \verb!M-x list-packages! e verranno visualizzati tutti i pacchetti disponibili,
 installati e non. \auctex, quindi, può essere installato in questo modo,
 premendo semplicemente su \emph{Install} dopo averlo selezionato.
-% TODO (Mosè 30/10/2012): immagino che se si segue questa procedura sia
-% necessario aggiungere una qualche cartella al `load-path' con
-%       (add-to-list 'load-path "<PERCORSO>")
-% e poi caricare `auctex' e `preview-latex' con
-%       (load "auctex.el" nil t t)
-%       (load "preview-latex.el" nil t t)
-% Non ho ancora Emacs 24, ancora non so quale sia la procedura completa.
+% TODO (Mosè 10/11/2012): si direbbe che dopo aver installato AUCTeX in questo
+% modo non sia necessario fare altro per caricarlo automaticamente, vedi
+% <http://lists.gnu.org/archive/html/auctex/2012-11/msg00003.html>.  Non ho
+% ancora Emacs 24 e non posso verificarlo personalmente, qualcuno è in grado di
+% confermare che non c'è bisogno di aggiungere niente al proprio file di
+% inizializzazione?
 
 Per installare \auctex{} in una versione di \emacs{} precedente alla 24.1 è
 necessario seguire una procedura diversa a seconda del sistema operativo
