(a) Aggiunti file per la scrittura con la classe 'guidatematica'; (b) Rinominati alcuni file; (c) Modificato il preambolo e il file principale per scrivere con la classe 'guidatematica'

--- a/introemacs.bib
+++ b/introemacs.bib
@@ -1,5 +1,3 @@
-% This file was created with JabRef 2.8.1.
-% Encoding: UTF8
 
 @ONLINE{emacsW32:wiki,
   author = {Autori vari},
@@ -11,7 +9,7 @@
 @ARTICLE{emacs:odebari,
   author = {Onofrio de Bari},
   title = {{GNU Emacs} e {AUC\TeX} per {\LaTeX}},
-  journaltitle = {Ars\TeX nica},
+  journal= {Ars\TeX nica},
   year = {2006},
   language = {italian},
   number = {2},
@@ -34,6 +32,7 @@
   year = {2011},
   url = {http://william.famille-blum.org/software/sumatra/index.html}
 }
+
 
 @MANUAL{emacs:stallman,
   author = {Richard Stallman},
