--- a/introemacs.tex
+++ b/introemacs.tex
@@ -10,51 +10,58 @@
 %%  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 %%  GNU General Public License for more details.
 
-\listfiles
-\documentclass[11pt,a4paper]{article}
+\documentclass[b5paper,11pt,openany]{guidatematica}
+\ProvidesFile{introemacs.tex}[2012/12/12 v.0.0 Breve guida all'uso di Emacs per LaTeX]
 
-\title{\sffamily\bfseries\titolo}
-\author{\autorea \and \autoreb \and \autorec}
-\date{\today}
-
-\usepackage{preambolo,lipsum}
-
-%%%
-%%% TEMP
-%%%
-\newcommand*{\myDraft}[1]{{%
-  \sffamily\Large\color{DarkRed}
-  Bozza~\the\month/\the\year\ -- \url{http://www.guitex.org/home/it/forum/6-altri-programmi/67205-gnu-emacs-lavori-in-corso\#67205}}}%
-
-\usepackage{eso-pic}
-\AddToShipoutPictureBG{%
-  \begin{picture}(0,0)\unitlength=1cm\relax
-   \put(1,1){\rotatebox{90}{\makebox(0,0)[l]{\myDraft}}}
-  \end{picture}%
-}
-%%%
-%%% TEMP
-%%%
+\usepackage{preambolo}
+\usepackage{lipsum}
 
 \begin{document}
 
+\frontmatter*
+
+\title{Una introduzione a GNU Emacs \& AUC\TeX{}}
+\author{Mosè Giordano, Orlando Iovino, Matteo Leccardi}
+\GetFileInfo{introemacs.tex}
+\date{\filename\ \fileversion\ del \filedate}
 \maketitle
-\begin{abstract}
-  \noindent In questo articolo vengono brevemente presentati il programma
-  \emacs{} ed il pacchetto \auctex{} per le principali piattaforme: Windows,
-  GNU/Linux e Mac OS. Dopo una introduzione ai programmi, verranno esposte le
-  modalità per poter installare e configurare \emacs{} e \auctex{} per poter
-  scrivere documenti \LaTeX{}. L'articolo non ha la pretesa di essere un
-  manuale, bensì un piccolo tutorial per far avvicinare gli utenti di \LaTeX{} a
-  questo programma, non così troppo complicato come spesso viene indicato.
-\end{abstract}
 
-\begin{multicols}{2}
-  \tableofcontents
-\end{multicols}
+\chapter{Licenza d'uso}
+\label{chap:licenza}
 
-\section{Introduzione}
-\label{sec:intro}
+Quest'opera è soggetta alla Creative Commons Public License versione 3.0 o
+posteriore: \emph{Attribuzione}, \emph{Non Commerciale}, \emph{Condividi} allo
+stesso modo. L'enunciato integrale della licenza è reperibile sul sito ufficiale
+\url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.
+
+\textcolor{red}{MODIFICARE \lipsum[1]}
+
+
+\chapter{Presentazione} 
+\label{chap:presentazione}
+
+In questo articolo vengono brevemente presentati il programma \emacs{} ed il
+pacchetto \auctex{} per le principali piattaforme: Windows, GNU/Linux e Mac
+OS. Dopo una introduzione ai programmi, verranno esposte le modalità per poter
+installare e configurare \emacs{} e \auctex{} per poter scrivere documenti
+\LaTeX{}. L'articolo non ha la pretesa di essere un manuale, bensì un piccolo
+tutorial per far avvicinare gli utenti di \LaTeX{} a questo programma, non così
+troppo complicato come spesso viene indicato.
+
+La realizzazione di questo lavoro a sei mani si è resa possibile
+grazie al sistema di controllo di versione Git (\url{http://git-scm.com}). Per
+poter collaborare si può clonare il progetto con %
+\verb!git clone git://gitorious.org/emacs-tutorial/emacs-tutorial.git!. È
+gradita la segnalazione di errori o refusi.
+
+\textcolor{red}{MODIFICARE \lipsum[2]}
+
+\newpage\tableofcontents*
+
+\mainmatter
+
+\chapter{Introduzione}
+\label{chap:intro}
 
 Lo sviluppo di \emacs{} è iniziato negli anni 1970 ai laboratori di Intelligenza
 Artificiale del MIT, cioè molto prima che si diffondesse l'informatica che
@@ -109,10 +116,10 @@ mette a disposizione numerosi strumenti che rendono senza alcun dubbio \emacs{}
 uno degli editor di testo più potenti per la scrittura di documenti \LaTeX.  In
 questa guida vedremo alcune delle funzioni principali di \auctex.
 
-\section{Installare \emacs}
-\label{sec:install}
+\chapter{Installare \emacs}
+\label{chap:install}
 
-\subsection{\emacs{} per Windows}
+\section{\emacs{} per Windows}
 \label{sec:installwin}
 
 
@@ -136,7 +143,7 @@ A questo punto \emacs{} è pronto per scrivere documenti in \LaTeX; l'utente
 infatti non deve specificare nessun percorso circa gli eseguibili della
 distribuzione installata: sarà \emacs{} stesso a trovarli.
 
-\subsection{\emacs{} per GNU/Linux}
+\section{\emacs{} per GNU/Linux}
 \label{sec:installlinux}
 
 
@@ -186,7 +193,7 @@ $ emacs file1.tex file2.tex
 \end{Verbatim}
 % $
 
-\subsection{\emacs{} per Mac OS}
+\section{\emacs{} per Mac OS}
 
 Sul mirror ufficiale %
 \sito{http://ftp.gnu.org/pub/gnu/emacs/windows/}{\emacs} non
@@ -222,7 +229,7 @@ graffe e la tilde, scrivendo queste righe nel file \emph{.emacs}
 (setq ns-alternate-modifier nil)
 \end{Verbatim}
 
-\section{Installare \auctex}
+\chapter{Installare \auctex}
 \label{sec:installauc}
 
 A partire dalla versione 24.1 di \emacs{} si possono installare i pacchetti di
@@ -243,7 +250,7 @@ necessario seguire una procedura diversa a seconda del sistema operativo
 utilizzato.  Di seguito sono riportate le istruzioni da seguire in questo caso
 per Windows, GNU/Linux e Mac OS.
 
-\subsection{\auctex{} per Windows}
+\section{\auctex{} per Windows}
 \label{sec:auctexwin}
 
 All'indirizzo \url{http://www.gnu.org/software/auctex/download-for-windows}
@@ -253,7 +260,7 @@ che quello di \emacs, posizionato in precedenza nel percorso suddetto, vi è una
 cartella dal nome \emph{site-lisp}: i file contenuti in queste cartelle vanno
 uniti in una sola cartella.
 
-\subsection{\auctex{} per GNU/Linux}
+\section{\auctex{} per GNU/Linux}
 \label{sec:auctexlinux}
 
 Anche il pacchetto \auctex{} è presente nei sistemi GNU/Linux. Come già detto
@@ -284,7 +291,7 @@ $ sudo apt-get install --no-install-recommends auctex
 \end{Verbatim}
 % $
 
-\subsection{\auctex{} per Mac OS}
+\section{\auctex{} per Mac OS}
 \label{sec:auctexmac}
 
 Come per \emacs{} non è disponibile una versione di \auctex{} già compilata per
@@ -488,7 +495,7 @@ Se si mette \verb!reindent-then-newline-and-indent! al posto di
 \verb!newline-and-indent! si avrà, in più, l'effetto che la riga attuale viene
 indentata.
 
-\section{Correttore ortografico}
+\chapter{Correttore ortografico}
 \label{sec:corr}
 
 Per abilitare \emacs{} e \auctex{} a lavorare con la lingua italiana bisogna
@@ -516,7 +523,7 @@ errati anche quando sono corretti, cosa che accade perché quel termine non è
 presente nel dizionario: si può aggiungerlo, premendo il tasto centrale del
 mouse quando questo è posizionato sulla parola e scegliere \texttt{Save word}.
 
-\subsection{Windows}
+\section{Windows}
 \label{sec:aspellwin}
 
 Per usare il correttore ortografico in \emacs, su un sistema operativo Windows,
@@ -550,7 +557,7 @@ dove, la prima e la terza sono quelle strettamente necessarie, mentre la seconda
 riga serve a risolvere dei problemi con le versioni precedenti di
 \emacs.
 
-\subsection{GNU/Linux}
+\section{GNU/Linux}
 \label{sec:aspelllinux}
 
 Il correttore ortografico GNU Aspell può essere installato facilmente
@@ -573,7 +580,7 @@ $ sudo zypper install aspell-it
 \end{Verbatim}
 % $
 
-\subsection{Mac OS}
+\section{Mac OS}
 \label{sec:aspellmac}
 
 Anche per Mac OS X è disponibile una versione di \textsf{GNU Aspell}
@@ -606,7 +613,7 @@ Come ultima cosa è necessario configurare \emacs\ aggiungendo al
 (setq ispell-dictionary "italiano")
 \end{Verbatim}
 
-\section{Ricerca diretta-inversa}
+\chapter{Ricerca diretta-inversa}
 \label{sec:ricdirinv}
 
 Una delle principali funzioni che spesso gli utenti di \LaTeX{} cercano nel
@@ -626,7 +633,7 @@ sul visualizzatore che si presta per questa funzione in quanto non è unico: in
 ambiente Windows si usa SumatraPDF, \textcolor{red}{in ambiente Linux si
   può usare [\ldots]}, mentre in ambiente Mac OS si usa Skim.
 
-\subsection{Ricerca diretta-inversa su Windows}
+\section{Ricerca diretta-inversa su Windows}
 \label{sec:fiswin}
 Prima di entrare nel vivo dell'argomento, bisogna ovviare ad un bug che da tempo
 segue il programma \emacs{} su Windows, in particolare i sistemi Windows Vista e
@@ -678,7 +685,7 @@ vale più di mille parole.
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=0.50\textwidth]{SumatraPDF}
+  \includegraphics[width=0.50\textwidth]{sumatrapdf}
   \caption{Impostazioni per il visualizzatore SumatraPDF.}
   \label{oi:fig:sumatra:setup}
 \end{figure}
@@ -723,12 +730,12 @@ righe a quelle sopra descritte:
 (output-dvi "Yap") (output-html "start"))))
 \end{Verbatim}
 
-\subsection{Ricerca diretta-inversa su GNU/Linux}
+\section{Ricerca diretta-inversa su GNU/Linux}
 \label{sec:fislinux}
 
 \textcolor{red}{\lipsum[1]}
 
-\subsection{Ricerca diretta-inversa su Mac OS}
+\section{Ricerca diretta-inversa su Mac OS}
 \label{sec:fismac}
 
 L'unico visualizzatore di file PDF per Mac OS X che supporta la
@@ -751,7 +758,7 @@ Nella figura~\ref{fig:skimpref} sono riportate le impostazioni
 corrette.
 \begin{figure}[tb]
   \centering
-  \includegraphics[width=\textwidth]{preferenze-Skim}
+  \includegraphics[width=\textwidth]{preferenze_skim}
   \caption{Preferenze di Skim per la ricerca diretta e inversa}
   \label{fig:skimpref}
 \end{figure}
@@ -782,181 +789,14 @@ aggiungere queste righe al file \emph{.emacs}
 (add-hook 'server-switch-hook 'ns-raise-emacs)
 \end{Verbatim}
 
-% \section{Skeleton mode}
-% \label{sec:skelmode}
-
-% \subsection{Introduzione}
-% \label{skelintro}
-
-% La \emph{skeleton mode} è uno speciale (ma potente) minilinguaggio, scritto in
-% Elisp (un dialetto di Lisp) ed incluso di default in \emacs. Maggiori
-% informazioni si possono ottenere digitando \verb!C-h i d m Autotype! in \emacs.
-
-% La \emph{skeleton mode} permette in maniera molto semplice di crearsi dei
-% blocchi di codice (che magari si usano spesso) e di associare a questi una
-% combinazione di tasti per richiamarli nel proprio documento. Ad un livello
-% successivo, si può anche usare questo linguaggio per creare dei veri e propri
-% \emph{templates}. Lo vedremo più avanti.
-
-% Per semplicità, per mostrarne l'uso, vengono di seguito riportati degli esempi
-% presi da una discussione sul forum del \guit; i codici si commentano quasi da
-% soli:
-% \begin{Verbatim}
-% (define-skeleton TeX-dollar-sign-skeleton
-%   "Make a pair of dollar"
-%   "signs and leave point inside" nil
-%   "$"_"$" )
-
-% (global-set-key (kbd "C-x e") 'TeX-dollar-sign-skeleton)
-% \end{Verbatim}
-% e
-% \begin{Verbatim}
-% (define-skeleton TeX-square-skeleton
-%   "Make a pair of square brackets"
-%   "and leave point inside" nil
-%   "\\[" \n _\n "\\]" )
-
-% (global-set-key (kbd "C-x s") 'TeX-square-skeleton
-% \end{Verbatim}
-% Nella prima riga si dichiara lo \emph{scheletro} con un nome, che verrà poi
-% utilizzato per poterlo richiamare nel codice. Segue quindi una breve descrizione
-% (facoltativa ma consigliata), e poi il codice vero e proprio. Infine con
-% \verb!global-set-key! viene creata una combinazione di tasti personali per
-% richiamare lo \emph{scheletro}.
-
-% % Gli esempi appena mostrati sono veramente semplici e forse se ne potrebbe fare
-% % a meno, ma servono per far capire con quanta semplicità si possono
-% % \emph{automatizzare} certe operazioni.
-
-% \subsection{Templates}
-% \label{sec:skeltempl}
-
-% Talvoltà può capitare di dover scrivere documenti che hanno una forma molto
-% simile tra loro, o che, all'opposto, utilizziamo così raramente che averne un
-% modello \emph{pronto uso} risulterebbe davvero comodo.
-
-% Ecco che allora ci viene in mente di creare un file, un \emph{modello di
-%   documento} già configurato, da richiamare nel nostro editor preferito.
-
-% Per \emacs{} esistono diversi pacchetti che consentono di creare
-% \emph{template}, ognuno dei quali richiede una installazione. Per fare questo
-% possiamo invece avvalerci anche della \emph{skeleton mode} inclusa già in
-% \emacs{}.
-
-% Supponiamo di voler creare un \emph{modello di lettera} da usare velocemente
-% all'occorrenza. Lo \emph{scheletro} di codice che verrà incluso nel documento va
-% appunto nel file \emph{.emacs}. Un prototipo semplice potrebbe essere il
-% seguente:
-
-% \begin{Verbatim}
-% (define-skeleton LaTeX-skeleton-letter "Inserts a Latex letter
-% skeleton into current buffer.  This only makes sense for empty
-% buffers."  "Destinatario: "
-% "\\documentclass[a4paper,10pt]{letter}\n"
-% "\\usepackage[T1]{fontenc}\n"
-% "\\usepackage[utf8]{inputenc}\n"
-% "\\usepackage[italian]{babel}\n"
-% "\\name{Pinco Pallino}\n"
-% "\\address{Via Marco Polo 32\\\\ Napoli 80100\\\\ Italy}\n"
-% "\\begin{document}\n"
-% "\\begin{letter}{" str | " *** Destinatario  *** " "}\n"
-% "\\opening{" _ "}\n\n"
-% "\\closing{Cordialmente}\n"
-% "\\end{letter}\n"
-% "\\end{document}\n")
-% \end{Verbatim}
-
-% Come già detto dopo aver dichiarato il nome dello \emph{scheletro} seguono una o
-% due (o a piacere) righe di commento. La riga:
-% \begin{Verbatim}
-% "Destinatario: "
-% \end{Verbatim}
-% è una riga di prompt che userà il \emph{minibuffer} per interagire con l'utente
-% quando verrà letto (o trovato) il simbolo \verb!str! nel codice; il valore
-% inserito dall'utente verrà proprio sostituito a \verb!str!.
-
-% Il simbolo '\_' indica la posizione dove verrà posto il cursore quando il codice
-% \emph{skeleton} è completamente inserito.
-
-% Il codice che si vuole inserire va sempre tra due doppi apici, i comandi vanno
-% preceduti da un \emph{backslash} e per ritornare a capo si usa \verb!\n!.
-
-% Infine, come precedentemente detto, si può richiamare il \emph{codice pronto
-%   uso} con una combinazione di tasti personale, ad esempio se si vuole usare la
-% combinazione \verb!C-c l!, bisogna scrivere nel file \emph{.emacs}:
-% \begin{Verbatim}
-% (global-set-key "\C-cl" 'LaTeX-skeleton-letter)
-% \end{Verbatim}
-
-% Ulteriori approfondimenti (oltre a quelli a cui si perviene con
-% \verb!C-h i d m Autotype!) si possono reperire on-line alla pagina di
-% riferimento (
-% \href{http://www.emacswiki.org/emacs/SkeletonMode}{Skeleton Mode}).
-
-% \section{Reference Card}
-% \label{sec:refcard}
-
-% Oltre alla vasta documentazione che si può reperire in rete ed ai
-% manuali ufficiali, di particolare utilità sono le \emph{Reference
-%   Card}, disponibili sia per \emacs{}, sia per \auctex{}.
-
-% Si tratta di un elenco delle principali funzionalità e dei comandi a
-% queste associate per poter, all'occorrenza, ricordare e trovare
-% velocemente quello che serve.
-
-% Il tutto è riportato in maniera ordinata e concisa in una sorta di
-% forma tabulare, eventualmente da stampare, e tenere a portata di mano
-% sulla propria scrivania.
-
-% Le reference card sono disponibili sia in rete, sia sul proprio
-% computer una volta installati \emacs{} ed \auctex. Sul proprio
-% computer dovrebbero esserci anche i sorgenti pronti per essere
-% compilati.
-
-% \begin{figure}[t]
-%  \centering
-%  \unitlength=0.005\textwidth
-%  \begin{picture}(200,120)
-%   \put(0,0){\framebox(94,120){%
-%    \includegraphics[width=0.51\textwidth]{refemacs}}}
-%   \put(95,0){\rotatebox{90}{\tiny Immagine estratta da
-%    \href{http://www.ps.uni-saarland.de/courses/prog-ws10/downloads/emacs_re
-%      fcard.pdf}{GNU Emacs Reference Card}}}
-%   \put(100,0){\framebox(94,120){%
-%    \includegraphics[width=0.51\textwidth]{refauctex}}}
-%   \put(195,0){\rotatebox{90}{\tiny Immagine estratta da
-%    \href{http://devcheatsheet.com/static/pdf/auctex-ref.pdf}{AUC\TeX{}
-%      Reference Card}}}
-%   \end{picture}
-% \end{figure}
-
-\section{Conclusioni}
+\chapter{Conclusioni}
 \label{sec:fine}
 
 \textcolor{red}{\lipsum[1]}
 
-\clearpage
-\phantomsection
-\addcontentsline{toc}{section}{\bibname}
 \nocite{*}
-\printbibliography
+\bibliography{introemacs}
 
-\vfill
-\phantomsection
-\addcontentsline{toc}{section}{Licenza d'uso \& Colophon}
-\section*{Licenza d'uso \& Colophon}
-\label{sec:lic}
-
-Quest'opera è soggetta alla Creative Commons Public License versione 3.0 o
-posteriore: \emph{Attribuzione}, \emph{Non Commerciale}, \emph{Condividi} allo
-stesso modo. L'enunciato integrale della licenza è reperibile sul sito ufficiale
-\url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.\\%
-
-\noindent La realizzazione di questo lavoro a sei mani si è resa possibile
-grazie al sistema di controllo di versione Git (\url{http://git-scm.com}). Per
-poter collaborare si può clonare il progetto con %
-\verb!git clone git://gitorious.org/emacs-tutorial/emacs-tutorial.git!. È
-gradita la segnalazione di errori o refusi.
 \end{document}
 
 %%% Local Variables:
