(a) Aggiustate altri \label; (b) Corretto una \section con un \chapter

--- a/introemacs.tex
+++ b/introemacs.tex
@@ -194,6 +194,7 @@ $ emacs file1.tex file2.tex
 % $
 
 \section{\emacs{} per Mac OS}
+\label{sec:installmac}
 
 Sul mirror ufficiale %
 \sito{http://ftp.gnu.org/pub/gnu/emacs/windows/}{\emacs} non
@@ -230,7 +231,7 @@ graffe e la tilde, scrivendo queste righe nel file \emph{.emacs}
 \end{Verbatim}
 
 \chapter{Installare \auctex}
-\label{sec:installauc}
+\label{chap:installauc}
 
 A partire dalla versione 24.1 di \emacs{} si possono installare i pacchetti di
 estensione all'interno di \emacs{} stesso. Basta infatti eseguire
@@ -354,11 +355,10 @@ Come visualizzatore principale si utilizza
 e inversa dal pdf, i dettagli sulla configurazione di \emacs{} e Skim sono
 riportati nel paragrafo \ref{sec:fismac}.
 
-%% 2012/09/19 : ho aggiunto il titolo breve perché con il font Latin
-%%              Modern il titolo lungo nell'indice non esce bene.
 
-\section[Personalizzare \emacs]{Personalizzare \emacs{} \& \auctex}
-\label{sec:personal}
+
+\chapter{Personalizzare \emacs{} \& \auctex}
+\label{chap:personal}
 
 In questo paragrafo vedremo alcune delle personalizzazioni che possono risultare
 utili quando si lavora con documenti \LaTeX{}.  Per modificare le impostazioni
@@ -496,7 +496,7 @@ Se si mette \verb!reindent-then-newline-and-indent! al posto di
 indentata.
 
 \chapter{Correttore ortografico}
-\label{sec:corr}
+\label{chap:corr}
 
 Per abilitare \emacs{} e \auctex{} a lavorare con la lingua italiana bisogna
 installare il correttore ortografico. Le procedure, poiché differenti, vengono
@@ -614,7 +614,7 @@ Come ultima cosa è necessario configurare \emacs\ aggiungendo al
 \end{Verbatim}
 
 \chapter{Ricerca diretta-inversa}
-\label{sec:ricdirinv}
+\label{chap:ricdirinv}
 
 Una delle principali funzioni che spesso gli utenti di \LaTeX{} cercano nel
 proprio editor è quella della ricerca diretta-inversa, molto utile in fase di
@@ -790,7 +790,7 @@ aggiungere queste righe al file \emph{.emacs}
 \end{Verbatim}
 
 \chapter{Conclusioni}
-\label{sec:fine}
+\label{chap:fine}
 
 \textcolor{red}{\lipsum[1]}
 
