--- a/introemacs.tex
+++ b/introemacs.tex
@@ -15,6 +15,7 @@
 
 \usepackage{preambolo}
 \usepackage{lipsum}
+\usepackage{ccicons}
 
 \begin{document}
 
@@ -30,12 +31,26 @@
 \label{chap:licenza}
 
 Quest'opera è soggetta alla Creative Commons Public License versione 3.0 o
-posteriore: \emph{Attribuzione}, \emph{Non Commerciale}, \emph{Condividi} allo
-stesso modo. L'enunciato integrale della licenza è reperibile sul sito ufficiale
-\url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.
+posteriore: \emph{Attribuzione}, \emph{Non Commerciale}, \emph{Condividi allo
+  stesso modo}. L'enunciato integrale della licenza è reperibile sul sito
+ufficiale \url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.
 
-\textcolor{red}{MODIFICARE \lipsum[1]}
-
+\bigskip\noindent\textsc{tu sei libero:}
+\begin{itemize}
+\item Di riprodurre, distribuire, comunicare al pubblico, esporre in pubblico,
+      rappresentare, eseguire e recitare quest'opera.
+\item Di modificare quest'opera.
+\end{itemize}
+\textsc{alle seguenti condizioni:}
+\begin{itemize}
+\item[\ccAttribution] Devi attribuire la paternità dell'opera nei modi indicati
+      dall'autore o da chi ti ha dato l'opera in licenza e in modo tale da non
+      suggerire che essi avallino te o il modo in cui tu usi l'opera.
+\item[\ccNonCommercial] Non puoi usare quest'opera per fini commerciali.
+\item[\ccShareAlike] Se alteri o trasformi quest'opera, o se la usi per crearne
+      un'altra, puoi distribuire l'opera risultante solo con una licenza
+      identica o equivalente a questa.
+\end{itemize}
 
 \chapter{Presentazione} 
 \label{chap:presentazione}
