Modifica alla struttura della cartella. Sistemate le figure nella cartella figure

--- a/preambolo.sty
+++ b/preambolo.sty
@@ -13,6 +13,9 @@
 \RequirePackage{ccicons}
 \RequirePackage{booktabs}
 
+% graphicx è caricato dalla classe
+\graphicspath{{figure/}}
+
 % fancyvrb è caricato dalla classe
 \fvset{fontsize=\small}
 
