--- a/TODO.org
+++ b/TODO.org
@@ -1,7 +1,10 @@
 * Tasks
-** TODO Completare il 'porting' della guida con la nuova classe guidatematica.cls
+** TODO [#B] Completare il 'porting' della guida con la nuova classe guidatematica.cls
+** TODO [#B] Modificare la struttura della guida
+** DONE Modificare la struttura della cartella
+   CLOSED: [2012-12-20 gio 16:58]
 ** DONE Aggiungere la licenza all'inizio e vederne l'interazione con quella delle guide tematiche
    CLOSED: [2012-12-20 gio 15:33]
-** TODO Modificare la presentazione iniziale della guida
+** TODO Modificare la presentazione iniziale della guida: aggiungere gli indirizzi posta elettronica; ricordare il repository ufficiale per chi vuole collaborare;        
 ** TODO Completare questo 'TODO' . . . :-)
 
